# Papyrus-Extender

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  xmake.lua
.github/workflows/: ci-release.yml  clang-format.yml
CMake/: source-list.cmake
Papyrus/: PyramidUtils.psc  SPE_Form.psc  SPE_Interface.psc  SPE_ObjectRef.psc  SPE_Utility.psc
src/: Console.h  PCH.h  Serialize.cpp  Serialize.h  StringUtil.h  main.cpp
src/.defines/: EventsMapUnique.def
src/Data/: ActorManager.cpp  ActorManager.h  QuestMarker.h
src/Handlers/: ActorManager.h  MarkerManager.h
src/Hooks/: Hooks.cpp  Hooks.h  Patch.h  Trampoline.h
src/Interface/: CustomMenu.cpp  CustomMenu.h  Interface.h
src/Papyrus/: Actor.cpp  Actor.h  Cell.cpp  Form.cpp  Form.h  GlobalVariable.cpp  GlobalVariable.h  Interface.cpp  Interface.h  Location.cpp  ObjectRef.cpp  ObjectRef.h  Papyrus.cpp  Papyrus.h  Pyramid.cpp  Pyramid.h  PyramidUtils.cpp  PyramidUtils.h  Utility.cpp  Utility.h
src/Papyrus/Events/: EventManager.cpp  EventManager.h  MapUnique.cpp  MapUnique.h  MapUniqueFilters.h
src/Papyrus/Functions/: Actor.cpp  Actor.h  Cell.cpp  Cell.h  Form.cpp  Form.h  GlobalVariable.cpp  GlobalVariable.h  Interface.cpp  Interface.h  Location.cpp  Location.h  ObjectRef.cpp  ObjectRef.h  Quest.cpp  Quest.h  Utility.cpp  Utility.h
src/PyramidUtils/: ActorManager.h  Geography.h  Input.h  PyramidUtils.h
src/Serialization/: Serialization.cpp  Serialization.h  Utility.h
src/Util/: Geography.h  Keywords.h  Random.h  Script.h  Singleton.h  StringUtil.h
src/Utility/: Geography.h  Input.h  Keywords.h  String.h  StringUtil.h
